--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
+     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <title>Simple Interest Calculator</title>
     </head>
     <body>
         <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
-
         Amount <input type="number"  id="principal">  <br/><br>
         Rate <input type="range"  id="rate" min="1" max="20" value="10.25" step="0.25" onchange="updateRate()">  
         <span id="rate_val">
@@ -25,15 +26,13 @@
         <option value="9">9</option>
         <option value="10">10</option>
         </select><br/><br>
-        Interest : <span id="result"></span><br><br>
+        Interest : <span id="interest"></span><br><br>
         <button onclick="compute()" >Compute Interest</button><br><br>
-        <span id="result">
-
-        </span><br>
+       <span id="result"></span>
         <footer>
         &#169; This Calculator belongs to Anitta T A
         </footer>
         </div>
-        
+       
     </body>
 </html>
